--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Welcome to the Tech Radar Repository.   Each radar contains notes on a particular theme.",
   "main": "radar.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "radar": "node src/radar.js"
   },
   "keywords": [],
   "author": "",
