--- a/.github/workflows/radar.yaml
+++ b/.github/workflows/radar.yaml
@@ -8,9 +8,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: npm run radar
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+          with:
+            node-version: 18
+
+      - name: Install
+        run: |
+          npm ci
+
+      - name: Build Radar
+        run: |
+          npm run radar
