--- a/.github/workflows/radar.yaml
+++ b/.github/workflows/radar.yaml
@@ -21,3 +21,24 @@ jobs:
       - name: Build Radar
         run: |
           npm run radar
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: radar-output
+          path: radar.json
+
+
+  commit:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v2
+        with:
+          name: radar-output
+      - run: |
+          git config user.name 'GitHub Actions'
+          git config user.email 'actions@github.com'
+          git add output.txt
+          git commit -m "Automatic commit from workflow"
+      - run: git push origin radar-branch
