--- a/.github/workflows/radar.yaml
+++ b/.github/workflows/radar.yaml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: radar-output
+      - run: git checkout -b commit-branch
       - run: |
           git config user.name 'GitHub Actions'
           git config user.email 'actions@github.com'
